# cmake

./: hello.tar
hello_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  main.c
hello_3/: CMakeLists.txt
hello_3/lib_hello/: CMakeLists.txt  hello.h
hello_3/src_main/: CMakeLists.txt  main.c
hello_3/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_3/temp/lib_hello/: Makefile  cmake_install.cmake
hello_3/temp/src_main/: Makefile  cmake_install.cmake
hello_4/lib_hello/: CMakeLists.txt  hello.c
hello_4/src_main/: CMakeLists.txt
hello_4/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_4/temp/lib_hello/: Makefile  cmake_install.cmake
hello_4/temp/out_bin/: hello
hello_4/temp/src_main/: Makefile  cmake_install.cmake
hello_5/: CMakeLists.txt  runhello.sh
hello_5/exe/doc/: readme
hello_5/exe/include/: hello.h
hello_5/lib_hello/: CMakeLists.txt  hello.c
hello_5/src_main/: CMakeLists.txt  main.c
hello_5/temp/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
hello_5/temp/lib_hello/: Makefile  cmake_install.cmake  libhello.so.1.2
hello_5/temp/src_main/: Makefile  cmake_install.cmake
